<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    tools:context=".Login_Activity">

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:text="@string/loginText"
        android:textAlignment="center"
        android:textColor="#E6E2E2"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/userET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="39dp" />

    <EditText
        android:id="@+id/userET"
        android:layout_width="354dp"
        android:layout_height="51dp"
        android:layout_marginTop="116dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTV" />

    <EditText
        android:id="@+id/passET"
        android:layout_width="357dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userET" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="362dp"
        android:layout_height="58dp"
        android:layout_marginTop="268dp"
        android:background="@drawable/mybutton"
        android:backgroundTint="#25D366"
        android:padding="10dp"
        android:text="@string/loginText"
        android:textColor="#E6E2E2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passET" />

    <Button
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="28dp"
        android:background="@android:color/transparent"
        android:text="@string/signUP"
        app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>